# shared-skills-bridge

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md  design.md  prompt-engineering.md  requirements.md
docs/d2/: README.md  architecture.d2  bidirectional-flow.d2  check-flow.d2  install-flow.d2  scan-flow.d2
scripts/: install.py
shared-skills/clean-architecture/: ATTRIBUTION.md  SKILL.md
shared-skills/clean-code/: ATTRIBUTION.md  SKILL.md
shared-skills/git-commit-guide/: ATTRIBUTION.md  SKILL.md
shared-skills/git-commit-guide/references/: conventional-commits-spec.md
shared-skills/karpathy-guidelines/: ATTRIBUTION.md
shared-skills/personal-dev-workflow/: SKILL.md
shared-skills/personal-dev-workflow/references/: clean-code-checklist.md  cross-platform-notes.md  git-workflow.md  tdd-guide.md
src/: __init__.py  adapter.py  bidirectional.py  installer.py  models.py  scanner.py  scheduler.py
tests/: test_adapter.py  test_bidirectional.py  test_bidirectional_kimi.py  test_installer.py  test_integration.py  test_models.py  test_scanner.py  test_scheduler.py  test_scheduler_crossplatform.py
